Defaulf.cshtml file is changed

--- a/COMP2139-Version 2/Views/Shared/Components/ProjectSummary/Default.cshtml
+++ b/COMP2139-Version 2/Views/Shared/Components/ProjectSummary/Default.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<COMP2139_Friday.Areas.ProjectManagement.Models.Project>
 
 <div class="project-summary-container">
-    <h3>List of Projects:</h3>
+    <h3>Available Projects:</h3>
     <ul class ="project-summary-list">
         @foreach (var project in Model)
         {
